kubectl/3-conv-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: conv
  template:
    metadata:
      labels:
        components: conv
    spec:
      containers:
        - name: conv-service
          image: antonlarichev/conv-service:1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "100m"
